--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ serde_json = "1.0"
 lazy_static = "1.4.0"
 execute = "0.2.11"
 clap = { version = "4.1.8", features = ["cargo"] }
+async-recursion = "1.0.2"
+
