--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,13 @@ name = "orphic"
 version = "0.1.0"
 edition = "2021"
 authors = ["Will Savage <wsavage6316@gmail.com>"]
-description = "Orphic -- A natural language interface for *nix systems.\n(Powered by ChatGPT)"
+description = "A natural language interface for *nix systems.\n(Powered by ChatGPT)"
+license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/ws-kj/Orphic"
+repsitory = "https://github.com/ws-kj/Orphic"
+keywords = ["cli", "ChatGPT", "LLM", "GPT"]
+categories = ["command-line-utilities"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
